fix: alignament issues in uls in plan section

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
 ------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 /*----------------
@@ -225,14 +225,14 @@ h3 {
   padding-left: 30px;
 }
 .col ul {
-  line-height: 2;
+  line-height: 1.5;
 }
 
-.plan .col  li {
+.plan .col li {
   display: flex;
   align-items: top;
   gap: 5px;
-  
+  margin-bottom: 8px;
 }
 
 .col .btn.secondary {
